--- a/index.html
+++ b/index.html
@@ -578,6 +578,20 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe">
+          <p class="subscribe-text">Підпишіться на розсилку</p>
+          <form name="footer-form">
+            <div class="form-footer">
+              <input class="form-email" name="user-mail" type="email" placeholder="Email" />
+              <button class="form-btn" type="submit">
+                Підписатися
+                <svg class="form-btn-icon" width="24" height="24">
+                  <use class="btn-icon" href="./images/icons.svg#icon-icon-send"></use>
+                </svg>
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
     </footer>
 
