--- a/index.html
+++ b/index.html
@@ -582,8 +582,14 @@
           <p class="subscribe-text">Підпишіться на розсилку</p>
           <form name="footer-form">
             <div class="form-footer">
-              <input class="form-email" name="user-mail" type="email" placeholder="Email" />
-              <button class="form-btn" type="submit">
+              <input class="form-email" name="user-mail" type="email" placeholder="E-mail" />
+              <button
+                class="form-btn"
+                type="submit"
+                animate__animated
+                animate__pulse
+                animate__slower
+              >
                 Підписатися
                 <svg class="form-btn-icon" width="24" height="24">
                   <use class="btn-icon" href="./images/icons.svg#icon-icon-send"></use>
