--- a/index.html
+++ b/index.html
@@ -580,22 +580,14 @@
         </div>
         <div class="subscribe">
           <p class="subscribe-text">Підпишіться на розсилку</p>
-          <form name="footer-form">
-            <div class="form-footer">
-              <input class="form-email" name="user-mail" type="email" placeholder="E-mail" />
-              <button
-                class="form-btn"
-                type="submit"
-                animate__animated
-                animate__pulse
-                animate__slower
-              >
-                Підписатися
-                <svg class="form-btn-icon" width="24" height="24">
-                  <use class="btn-icon" href="./images/icons.svg#icon-icon-send"></use>
-                </svg>
-              </button>
-            </div>
+          <form class="form-footer" name="footer-form">
+            <input class="form-email" name="user-mail" type="email" placeholder="E-mail" />
+            <button class="form-btn animate__animated animate__pulse animate__slower" type="submit">
+              Підписатися
+              <svg class="form-btn-icon" width="24" height="24">
+                <use class="btn-icon" href="./images/icons.svg#icon-icon-send"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
@@ -609,64 +601,62 @@
             <use href="./images/icons.svg#close"></use>
           </svg>
         </button>
-        <div class="modal-form">
-          <h2 class="modal-form-title">Залиште свої дані, ми вам передзвонимо</h2>
 
-          <form class="modal-forms" autocomplete="off">
-            <div class="modal-forms-groups">
-              <label class="modal-form-group" for="name">
-                <span class="modal-form-label">Ім'я</span>
-                <input class="modal-form-input" type="text" name="name" id="name" />
-                <svg class="modal-form-icon" width="" height="">
-                  <use href="./images/icons.svg#icon-person"></use>
-                </svg>
-              </label>
+        <h2 class="modal-form-title">Залиште свої дані, ми вам передзвонимо</h2>
+        <form class="modal-forms" autocomplete="off">
+          <div class="modal-forms-groups">
+            <label class="modal-form-group" for="name">
+              <span class="modal-form-label">Ім'я</span>
+              <input class="modal-form-input" type="text" name="name" id="name" />
+              <svg class="modal-form-icon">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </label>
 
-              <label class="modal-form-group" for="tel">
-                <span class="modal-form-label">Телефон</span>
-                <input class="modal-form-input" type="tel" name="tel" id="tel" />
-                <svg class="modal-form-icon" width="" height="">
-                  <use href="./images/icons.svg#icon-phone"></use>
-                </svg>
-              </label>
+            <label class="modal-form-group" for="tel">
+              <span class="modal-form-label">Телефон</span>
+              <input class="modal-form-input" type="tel" name="tel" id="tel" />
+              <svg class="modal-form-icon">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </label>
 
-              <label class="modal-form-group" for="email">
-                <span class="modal-form-label">Пошта</span>
-                <input class="modal-form-input" type="email" name="email" id="email" />
-                <svg class="modal-form-icon" width="" height="">
-                  <use href="./images/icons.svg#icon-email"></use>
-                </svg>
-              </label>
+            <label class="modal-form-group" for="email">
+              <span class="modal-form-label">Пошта</span>
+              <input class="modal-form-input" type="email" name="email" id="email" />
+              <svg class="modal-form-icon">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </label>
 
-              <label class="modal-form-group">
-                <span class="modal-form-label">Коментар</span>
-                <textarea
-                  class="modal-form-textarea"
-                  name="comment"
-                  id="comment"
-                  rows="7"
-                  placeholder="Введіть текст"
-                ></textarea>
-              </label>
-            </div>
-            <label class="modal-checkbox">
-              <input class="modal-form-checkbox visually-hidden" type="checkbox" name="check" />
-              <svg class="form-checkbox-icon" width="20" height="20">
-                <!-- <use
+            <label class="modal-form-group">
+              <span class="modal-form-label">Коментар</span>
+              <textarea
+                class="modal-form-textarea"
+                name="comment"
+                id="comment"
+                rows="7"
+                placeholder="Введіть текст"
+              ></textarea>
+            </label>
+          </div>
+          <label class="modal-checkbox">
+            <input class="modal-form-checkbox visually-hidden" type="checkbox" name="check" />
+            <svg class="form-checkbox-icon" width="20" height="20">
+              <!-- <use
                   class="form-checkbox-icon-uncheck"
                   href="./images/icons.svg#icon-uncheck"
                 ></use> -->
-                <use class="form-checkbox-icon-check" href="./images/icons.svg#icon-check"></use>
-              </svg>
-              <span class="modal-checkbox-label">
-                Погоджуюся з розсилкою та приймаю
-                <a class="modal-form-link" href="">Умови договору</a>
-              </span>
-            </label>
+              <use class="form-checkbox-icon-check" href="./images/icons.svg#icon-check"></use>
+            </svg>
+            <span class="modal-checkbox-label">
+              Погоджуюся з розсилкою та приймаю
+              <a class="modal-form-link" href="">Умови договору</a>
+            </span>
+          </label>
 
-            <button class="modal-form-btn" type="submit">Відправити</button>
-          </form>
-        </div>
+          <button class="modal-form-btn" type="submit">Відправити</button>
+        </form>
       </div>
     </div>
 
